--- a/PAGES/02e_arrays/index.html
+++ b/PAGES/02e_arrays/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2836,7 +2836,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="vectors" class="scrollspy">
+<section id="vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2934,7 +2934,7 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
     </div>
   </div>
 </section>
-<section id="matrices_i_stylecolorredoptional" class="scrollspy section-bg-color">
+<section id="matrices_i_stylecolorredoptional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3032,7 +3032,7 @@ Y &#61; &#91;4 5 6&#93;     # row-vector</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
