--- a/PAGES/03b_packages/index.html
+++ b/PAGES/03b_packages/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2832,7 +2832,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="packages" class="scrollspy section-bg-color">
+<section id="packages" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2844,7 +2844,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="loading_packages_and_calling_functions" class="scrollspy">
+<section id="loading_packages_and_calling_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2878,7 +2878,7 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="built-in_functions" class="scrollspy section-bg-color">
+<section id="built-in_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2957,7 +2957,7 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="why_using_import_if_its_more_verbose" class="scrollspy">
+<section id="why_using_import_if_its_more_verbose" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2971,7 +2971,7 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="approaches_to_loading_packages_and_calling_functions" class="scrollspy section-bg-color">
+<section id="approaches_to_loading_packages_and_calling_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3030,7 +3030,7 @@ average&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="macros" class="scrollspy">
+<section id="macros" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3078,7 +3078,7 @@ average&#40;x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
