--- a/PAGES/04b_logical/index.html
+++ b/PAGES/04b_logical/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section lays the foundations for defining conditions, defined as functions and operators returning true or false as their output. A typical example of condition is <code>x &gt; y</code>.</p>
-<p>To better understand this section, it&#39;s helpful to recall the classification of operators discussed <a href="/julia_book/PAGES/02b_variables/#operators">here</a>. Depending on their number of operands, operators can be categorized into two: unary and binary. Specifically, given a generic operator <code>&lt;operator&gt;</code> and two <code>Bool</code> variables <code>x</code> and <code>y</code>, a <strong>unary operator</strong> takes a single argument and is typically written to the left of its operand, as in <code>&lt;operator&gt;x</code>. In contrast, <strong>binary operators</strong> take two arguments and are written between them, as in <code>x &lt;operator&gt; y</code>.</p>
+<p>This section lays the foundations for introducing conditions, defined as functions and operators returning true or false as their output. Common examples of conditions include <code>x &gt; y</code> or <code>x &#61;&#61; y</code>.</p>
+<p>To get the most out of this section, keep in mind the classification of operators discussed <a href="/julia_book/PAGES/02b_variables/#operators">here</a>. This establishes that operators can be classified by the number of operands they require. Specifically, <strong>unary operators</strong> act on a single operand and precede it, as in <code>&lt;operator&gt;x</code>. Instead, <strong>binary operators</strong> take two operands and are placed between them, as in <code>x &lt;operator&gt; y</code>.</p>
 <p>      </div>
     </div>
   </div>
@@ -3226,7 +3226,7 @@ is_one_positive  &#61; any.&#40;i -&gt; i &gt; 0, &#91;x,y&#93;&#41;</code></pre
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
