--- a/PAGES/05b_immutables/index.html
+++ b/PAGES/05b_immutables/index.html
@@ -2811,11 +2811,11 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="defining_mutability" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Defining Mutability</h2></p>
+        <h2>Introduction</h2></p>
 <p>Objects in programming can be broadly classified into two categories: mutable and immutable. <span style="color: rgb(62, 121, 180);"><strong>Mutable objects</strong></span> allow their elements to be modified, appended, or removed at will. These objects are designed with flexibility in mind, with <strong>vectors</strong> constituting a prime example.</p>
 <p>In contrast, <span style="color: rgb(62, 121, 180);"><strong>immutable objects</strong></span> are inherently unchangeable: they prevent additions, removals, or modifications of their elements. This immutability effectively locks variables into a read-only state, safeguarding against unintended changes and potentially entailing performance gains. A common example of immutable object is <strong>tuples</strong>.</p>
 <p>This section will be relatively brief, focusing solely on the distinctions between mutable and immutable objects. Subsequent sections will expand on their uses and properties.</p>
@@ -2917,7 +2917,7 @@ pop&#33;&#40;x&#41;           # error, just like push&#33;&#40;x, &lt;some eleme
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
@@ -3521,7 +3521,7 @@ for multiple pics in a row
       <ul>
         
         <li>
-          <a href="#defining_mutability" data-offset="-40">Defining Mutability</a>
+          <a href="#introduction" data-offset="-40">Introduction</a>
         </li>
         
         <li>
