--- a/PAGES/05c_mutation/index.html
+++ b/PAGES/05c_mutation/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The upcoming sections will be devoted to <strong>vector mutation</strong>. However, to properly cover this subject, we first need to introduce some preliminary concepts, including:</p>
+<p>The upcoming sections will be entirely devoted to <strong>vector mutation</strong>. However, to properly cover this subject, we first need to introduce some preliminary concepts, including:</p>
 <ul>
 <li><p>the distinction between assignments and mutations</p>
 </li>
@@ -2835,7 +2835,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Some Background</h2></p>
-<p>Recall that <strong>variables</strong> serve as labels for <strong>objects</strong>, with objects in turn holding <strong>values</strong>. Importantly, objects can be classified according to the number of <strong>elements</strong> contained, ranging from single-element objects &#40;e.g. integers and floating-point numbers&#41; to collections &#40;e.g. vectors&#41;.</p>
+<p>Recall that <strong>variables</strong> serve as labels for <strong>objects</strong>, with objects in turn holding <strong>values</strong>. Moreover, objects can be classified according to the number of <strong>elements</strong> contained, ranging from single-element objects &#40;e.g. integers and floating-point numbers&#41; to collections &#40;e.g. vectors&#41;.</p>
  <div class="multiple_pics">
 <div class="row" style="max-width:100%;">
   <div class="column2">
@@ -2891,7 +2891,7 @@ x&#91;:&#93; &#61; &#91;0,0&#93;</code></pre>
  0</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The distinction will become relevant in Part II, when we explore strategies for speeding up operations. We&#39;ll show that mutations tend to be faster than creating new objects.  </div>  </div>
+<p>The distinction will become relevant in Part II, where we explore strategies for speeding up operations. We&#39;ll show in particular that mutations tend to be faster than creating new objects.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -3041,7 +3041,7 @@ x&#91;1&#93; &#61; 0</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
