--- a/PAGES/10b_macrosAlgorithms/index.html
+++ b/PAGES/10b_macrosAlgorithms/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2840,7 +2840,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="about_macros_for_optimizations" class="scrollspy section-bg-color">
+<section id="about_macros_for_optimizations" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2853,7 +2853,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="applying_macros_in_for-loops_inbounds_as_an_example" class="scrollspy">
+<section id="applying_macros_in_for-loops_inbounds_as_an_example" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2991,7 +2991,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="macros_could_be_disregarded_or_applied_automatically_by_the_compiler" class="scrollspy section-bg-color">
+<section id="macros_could_be_disregarded_or_applied_automatically_by_the_compiler" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3100,7 +3100,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
