--- a/index.html
+++ b/index.html
@@ -2309,7 +2309,7 @@ color: white;
 
 <div class="franklin-content">
  <div class="home_container">
-<section id="welcome_to_the_site" class="scrollspy section-bg-color">
+<section id="welcome_to_the_site" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2321,7 +2321,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="a_quick_overview_of_the_book" class="scrollspy">
+<section id="a_quick_overview_of_the_book" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2344,7 +2344,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="13633231208144796923" class="scrollspy section-bg-color">
+<section id="13633231208144796923" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2414,7 +2414,7 @@ color: white;
       <span class="ctrl-text">( <kbd>Ctrl + 🠚</kbd> )</span>
       <img src="/julia_book/assets/icons/next-page.png"
       style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-  <span class="center-text">  © Martin Alfaro <br>Last Modified March 9, 2025 </span>  
+  <span class="center-text">  © Martin Alfaro <br>Last Modified March 12, 2025 </span>  
 </div>
 <!-- </p>  -->
 </footer>
