--- a/PAGES/02b_variables/index.html
+++ b/PAGES/02b_variables/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2821,7 +2821,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="variables" class="scrollspy">
+<section id="variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2900,7 +2900,7 @@ x -&#61; 3        # equivalent</code></pre>
     </div>
   </div>
 </section>
-<section id="types" class="scrollspy section-bg-color">
+<section id="types" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2933,7 +2933,7 @@ x -&#61; 3        # equivalent</code></pre>
     </div>
   </div>
 </section>
-<section id="operators" class="scrollspy">
+<section id="operators" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2974,7 +2974,7 @@ x -&#61; 3        # equivalent</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
