--- a/PAGES/02c_scalars/index.html
+++ b/PAGES/02c_scalars/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2821,7 +2821,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="numbers" class="scrollspy section-bg-color">
+<section id="numbers" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2890,7 +2890,7 @@ z &#61; 0/0</code></pre>
     </div>
   </div>
 </section>
-<section id="boolean_variables" class="scrollspy">
+<section id="boolean_variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2916,7 +2916,7 @@ z &#61; x &gt; y         # same operation &#40;don&#39;t interpreted it as &#39;
     </div>
   </div>
 </section>
-<section id="arithmetic_operators" class="scrollspy section-bg-color">
+<section id="arithmetic_operators" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2989,7 +2989,7 @@ z &#61; x &gt; y         # same operation &#40;don&#39;t interpreted it as &#39;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
