--- a/PAGES/05h_inplace/index.html
+++ b/PAGES/05h_inplace/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2823,7 +2823,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="in-place_functions" class="scrollspy">
+<section id="in-place_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2931,7 +2931,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="built-in_in-place_functions" class="scrollspy section-bg-color">
+<section id="built-in_in-place_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3032,7 +3032,7 @@ map&#33;&#40;a -&gt; a^2, output, x&#41;       # we update &#96;output&#96;</cod
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
