--- a/PAGES/08e_TS-barrierFunctions/index.html
+++ b/PAGES/08e_TS-barrierFunctions/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2843,7 +2843,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="applying_barrier_functions" class="scrollspy section-bg-color">
+<section id="applying_barrier_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2912,7 +2912,7 @@ end
     </div>
   </div>
 </section>
-<section id="remarks_on_code_warntype" class="scrollspy">
+<section id="remarks_on_code_warntype" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3039,7 +3039,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
