--- a/PAGES/08g_TS-highOrderFunctions/index.html
+++ b/PAGES/08g_TS-highOrderFunctions/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2841,7 +2841,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="functions_as_arguments_the_issue" class="scrollspy section-bg-color">
+<section id="functions_as_arguments_the_issue" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2856,7 +2856,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="an_example_of_no_specialization" class="scrollspy">
+<section id="an_example_of_no_specialization" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2922,7 +2922,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="forcing_specialization" class="scrollspy section-bg-color">
+<section id="forcing_specialization" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2984,7 +2984,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
