--- a/PAGES/11c_multithread_tasks/index.html
+++ b/PAGES/11c_multithread_tasks/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2841,7 +2841,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="enabling_multithreading" class="scrollspy">
+<section id="enabling_multithreading" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2878,7 +2878,7 @@ nthreads&#40;&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="task-based_parallelism_spawn" class="scrollspy section-bg-color">
+<section id="task-based_parallelism_spawn" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2951,7 +2951,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="multithreading_overhead" class="scrollspy">
+<section id="multithreading_overhead" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3061,7 +3061,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 9, 2025 
+          © Martin Alfaro <br>Last Modified March 12, 2025 
       </span> 
   </div> 
 </footer>
