--- a/links/index.html
+++ b/links/index.html
@@ -2345,7 +2345,7 @@ color: white;
  </style>
 
  <div class="linkPage">
-<section id="13633231208144796923" class="scrollspy">
+<section id="13633231208144796923" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2355,7 +2355,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="software" class="scrollspy section-bg-color">
+<section id="software" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2373,13 +2373,15 @@ color: white;
     </div>
   </div>
 </section>
-<section id="text_editors" class="scrollspy">
+<section id="text_editors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Text Editors</h2></p>
 <ul>
 <li><p><a href="https://code.visualstudio.com/Download">VS Code</a><br/></p>
+</li>
+<li><p><a href="https://vscodium.com/">VS Codium</a><br/></p>
 </li>
 <li><p><a href="https://www.vim.org/download.php">Vim</a><br/></p>
 </li>
@@ -2395,7 +2397,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="julia_documentation_and_forums" class="scrollspy section-bg-color">
+<section id="julia_documentation_and_forums" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
